Fonts too big! Fixed again!

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ html, body {
 body {
     display: flex;
     font-family: 'Roboto', sans-serif;
-    font-size: 3em;
+    font-size: 2em;
     background-color: black;
     color: white;
 }
